# TaylorTrack

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE
CMakeModules/: FindPortaudio.cmake
Testdata/: 0-180_short.txt  180-180_short.txt  270-180_short.txt  90-180_short.txt  Test.txt  real_config.conf  taylortrack.conf  taylortrack2.conf  taylortrack3.conf  taylortrack4.conf
conf/: input.conf  real_config.conf
src/: CMakeLists.txt  audio_input.cpp  combination_module.cpp  opencv_datareceiver.cpp  readport.cpp  sim_datareceiver.cpp  sim_datastreamer.cpp  visualizer.cpp  writeport.cpp
src/input/: dummy_input_strategy.cpp  dummy_input_strategy.h  input_strategy.h  microphone_input_strategy.cpp  microphone_input_strategy.h  opencv_input_strategy.cpp  opencv_input_strategy.h  read_file_input_strategy.cpp  read_file_input_strategy.h  wave_input_strategy.cpp  wave_input_strategy.h
src/localization/: audio_localizer.h  localizer.h  srp_phat.cpp  srp_phat.h  srpphat.cpp  srpphat.h  video_localizer.h  vision_tracker.cpp  vision_tracker.h
src/sim/: data_receiver.cpp  data_receiver.h  streamer.cpp  streamer.h
src/tests/: accuracy_test.cpp  config_parser_test.cpp  fftTest.cpp  ffttest.cpp  parserTest.cpp  parser_test.cpp  parsertest.cpp  readInputFileTest.cpp  read_input_file_test.cpp  reastinputfiletest.cpp  simtest.cpp  simulation_test.cpp  srp_phat_test.cpp  srpphatTest.cpp  streamer_test.cpp  streamertest.cpp  testinit.cpp  vadSimpleTest.cpp  vad_simple_test.cpp  wave_input_test.cpp  wave_parser_test.cpp
src/utils/: config.h  config_parser.cpp  config_parser.h  fft_lib.cpp  fft_lib.h  fft_strategy.cpp  fft_strategy.h  parameter_parser.cpp  parameter_parser.h  parameters.h  vad_simple.cpp  vad_simple.h  vad_strategy.h  wave_parser.cpp  wave_parser.h
src/vis/: OutputVisualizer.cpp  OutputVisualizer.h  output_visualizer.cpp  output_visualizer.h
workspace/workspace/: main.cpp
workspace/workspace.xcodeproj/: project.pbxproj
workspace/workspace.xcodeproj/project.xcworkspace/xcuserdata/tamarafriess.xcuserdatad/: UserInterfaceState.xcuserstate
workspace/workspace.xcodeproj/xcuserdata/tamarafriess.xcuserdatad/xcschemes/: xcschememanagement.plist
